--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 10 October 1999</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> coming soon</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 7742438742</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Ajmer (Rajasthan), INDIA</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Ajmer (Rajasthan), INDIA</li>
                 </ul>
               </div>
               <div class="col-lg-6">
