--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <div class="profile">
         <img src="assets/img/Raj_circle.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Rajkumar Pareek</a></h1>
+        <h1 class="text-light"><a href="index.html">Rajkumar Pareek herro</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/Raj_pareek11" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/Rajkumarpareek23101999" class="facebook"><i class="bx bxl-facebook"></i></a>
