--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Enthusiastic Programmer &amp; Web Developer.</h3>
             <p class="font-italic">
-              I'm an active Compititive Programmer and an experienced Web Developer. I'm currently learning Flutter Development
+              I'm an active Programmer and have solved 600+ questions on various coding platforms.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -284,12 +284,10 @@
 
 
             <div class="resume-item">
-              <h4>Institute Security management system</h4>
+              <h4>PORTFOLIO</h4>
             
               <ul>
-                <li>Build a java (Fronted) and mysql (Databases) GUI based application for institute
-                  security management system in which we can get the daily duties of guards and
-                  keys information and daily files of entries and exit.</li>
+                <li>Build .</li>
               </ul>
             </div>
 
