--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://w7.pngwing.com/pngs/293/326/png-transparent-r-logo-desktop-s-love-name-mobile-phones-r-miscellaneous-3d-computer-graphics-name.png" rel="icon">
+  <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -193,9 +194,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">PYTHON<i class="val">40%</i></span>
+              <span class="skill">PYTHON<i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -287,7 +288,16 @@
               <h4>PORTFOLIO</h4>
             
               <ul>
-                <li>Build .</li>
+                <li>Build My Portfolio. It uses HTML, CSS, JavaScript, Php, Bootstrap.  </li>
+              </ul>
+            </div>
+
+
+            <div class="resume-item">
+              <h4>Video Chat App</h4>
+            
+              <ul>
+                <li>Build a Video Chat web Application/Website. It uses React js, Node js, HTML, CSS.   </li>
               </ul>
             </div>
 
