--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
             
               <ul>
                 <li>Build My Portfolio. It uses HTML, CSS, JavaScript, Php, Bootstrap.  </li>
+                <li>Deployed at: https://rajfolio11.netlify.app/</li>
               </ul>
             </div>
 
@@ -298,6 +299,7 @@
             
               <ul>
                 <li>Build a Video Chat web Application/Website. It uses React js, Node js, HTML, CSS.   </li>
+                <li>Deployed at: https://videochat111.netlify.app/</li>
               </ul>
             </div>
 
