--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Rajkumar Pareek</h1>
-      <p>I am <span class="typed" data-typed-items=" Tech. Enthusiast, Freelancer"></span></p>
+      <p>I am <span class="typed" data-typed-items=" Tech. Enthusiast, Passionate"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -94,7 +94,7 @@
             <img src="assets/img/Raj1.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Enthusiastic Programmer &amp; Web Developer.</h3>
+            <h3>Enthusiastic Programmer &amp; Quick Learner</h3>.</h3>
             <p class="font-italic">
               I'm an active Programmer and have solved 600+ questions on various coding platforms.
             </p>
