--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Rajkumar Pareek</h1>
-      <p>I am <span class="typed" data-typed-items=" Tech. Enthusiast, Passionate"></span></p>
+      <p>I am <span class="typed" data-typed-items=" Tech. Enthusiast, Passionate."></span></p>
     </div>
   </section><!-- End Hero -->
 
