--- a/index.html
+++ b/index.html
@@ -117,9 +117,7 @@
               </div>
             </div>
             <p>
-              I am working as an Web Developer from last 4 months, i have worked on few sites for my college projects.
-              I am also active in compititive Programming , usually i participate in short contest on Codeforces and Atcoder.
-              From last few weeks i am learning Flutter Development also
+              I am looking for a challenging role in a reputable organization to utilize my technical skills for the growth of the organization and enhance my knowledge about new and emerging trends in the IT sector.
             </p>
           </div>
         </div>
