--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Enthusiastic Programmer &amp; Quick Learner</h3>.</h3>
             <p class="font-italic">
-              I'm an active Programmer and have solved 600+ questions on various coding platforms.
+              Passionate and a retentive engineering student. Capable to use technical skills to deliver efficient
+              solutions.
             </p>
             <div class="row">
               <div class="col-lg-6">
