--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Bachelor of Technology </h4>
-              <h5>2018 - 2022</h5> <h5>8.54 CGPA(Till 5th semester)</h5>
+              <h5>2018 - 2022</h5> <h5>8.59 CGPA(Till 6th semester)</h5>
               <p><em>IIIT KOTA</em></p>
               <p>I am pursuing my Bachelor of Technology Degree in Electronics and communication Engineering from Indian Institute of Information Technology, Kota. Mentored by Malviya National Institute of Technology, Jaipur.</p>
             </div>
@@ -288,7 +288,7 @@
             
               <ul>
                 <li>Build My Portfolio. It uses HTML, CSS, JavaScript, Php, Bootstrap.  </li>
-                <li>Deployed at: https://rajfolio11.netlify.app/</li>
+                <li>Deployed at: https://rajfolio11.netlify.app</li>
               </ul>
             </div>
 
@@ -298,7 +298,7 @@
             
               <ul>
                 <li>Build a Video Chat web Application/Website. It uses React js, Node js, HTML, CSS.   </li>
-                <li>Deployed at: https://videochat111.netlify.app/</li>
+                <li>Deployed at: https://videochat111.netlify.app</li>
               </ul>
             </div>
 
