--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="col-lg-4" data-aos="fade-right">
             <br>
             <br>
-            <img src="assets/img/Raj1.JPG" class="img-fluid" alt="">
+            <img src="assets/img/Raj1.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Enthusiastic Programmer &amp; Quick Learner</h3>.</h3>
