--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                 <p>+91 7742438742</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/place/Ajmer,+Rajasthan+305001/@26.4515784,74.6073077,13z/data=!3m1!4b1!4m5!3m4!1s0x396be6e49163f127:0xb5ed13c1cb055183!8m2!3d26.4573487!4d74.6458987" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
