--- a/index.html
+++ b/index.html
@@ -378,8 +378,7 @@
                 <h4>Call:</h4>
                 <p>+91 7742438742</p>
               </div>
-
-              <iframe src="https://www.google.com/maps/place/Ajmer,+Rajasthan+305001/@26.4515784,74.6073077,13z/data=!3m1!4b1!4m5!3m4!1s0x396be6e49163f127:0xb5ed13c1cb055183!8m2!3d26.4573487!4d74.6458987" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57154.06005702916!2d74.60730774955186!3d26.45157838191509!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396be6e49163f127%3A0xb5ed13c1cb055183!2sAjmer%2C%20Rajasthan%20305001!5e0!3m2!1sen!2sin!4v1625611377804!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
