--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am Rajkumar Pareek and Currently I am a fourth year student at Indian Institute Of Information Technology KOTA, Pursuing my Bachelor of Technology in Electronics and communication Engineering. </p>
+          <p>I am Rajkumar Pareek, Currently I am a fourth year student at Indian Institute Of Information Technology Kota, Pursuing my Bachelor of Technology in Electronics and communication Engineering. </p>
         </div>
 
         <div class="row">
@@ -245,7 +245,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Rajkumar pareek</h4>
-              <p><em>I am fourth year student at IIIT KOTA  pursuing my Bachelor of Technology Degree in Electronics and Communication Engineering. Currently I am Student Placement Coordinator for session 2021-2022. My hobbies are Playing badminton and watching web series. </em></p>
+              <p><em>I am fourth year undergraduate at IIIT KOTA  pursuing my Bachelor of Technology Degree in Electronics and Communication Engineering. Currently I am Student Placement Coordinator for session 2021-2022. My hobbies are Playing badminton and watching web series. </em></p>
               <ul>
                 <li>Raj villa vinayak nagar Kekri, Ajmer(Rajasthan)</li>
                 <li>+91 7742438742</li>
@@ -315,7 +315,7 @@
               <h4>Captcha</h4>
             
               <ul>
-                <li>Identify whether the user is human or not/human vision.It is a Python GUI-based project using Tkinter.</li>
+                <li>Identify whether the user is human or not/human vision. It is a Python GUI-based project using Tkinter.</li>
               </ul>
             </div>
             
@@ -325,7 +325,7 @@
             <div class="resume-item">
               <h4>8*8*8 Led Cube</h4>
               <ul>
-                <li>Build 8*8*8 led cube that uses Arduino Uno.It shows various amazing and different light patterns.</li>
+                <li>Build 8*8*8 led cube that uses Arduino Uno. It shows various amazing and different light patterns.</li>
               </ul>
             </div>
 
