--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 23 October 1999</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> coming soon</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> https://rajfolio.me</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 7742438742</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Ajmer (Rajasthan), INDIA</li>
                 </ul>
@@ -288,6 +288,7 @@
             
               <ul>
                 <li>Build My Portfolio. It uses HTML, CSS, JavaScript, Php, Bootstrap.  </li>
+                <li>Deployed at: https://rajfolio.me </li>
                 <li>Deployed at: https://rajfolio11.netlify.app</li>
               </ul>
             </div>
