--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             
               <ul>
                 <li>Build My Portfolio. It uses HTML, CSS, JavaScript, Php, Bootstrap.  </li>
-                <li>Deployed at: https://rajfolio.me </li>
+                <a href="https://rajfolio.me/"><li>Deployed at: https://rajfolio.me </li></a>
                 <li>Deployed at: https://rajfolio11.netlify.app</li>
               </ul>
             </div>
