--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
             
               <ul>
                 <li>Build My Portfolio. It uses HTML, CSS, JavaScript, Php, Bootstrap.  </li>
-                <li>Deployed at: <a href="https://rajfolio.me">rajfolio.me</a></li>
-                <li>Deployed at: https://rajfolio11.netlify.app</li>
+                <li>Deployed at: <a href="https://rajfolio.me">https://rajfolio.me</a></li>
+                <li>Deployed at: <a href="https://rajfolio11.netlify.app" ></a>https://rajfolio11.netlify.app</li>
               </ul>
             </div>
 
@@ -299,7 +299,7 @@
             
               <ul>
                 <li>Build a Video Chat web Application/Website. It uses React js, Node js, HTML, CSS.   </li>
-                <li>Deployed at: https://videochat111.netlify.app</li>
+                <li>Deployed at: <a href="https://videochat111.netlify.app" >https://videochat111.netlify.app</a></li>
               </ul>
             </div>
 
