--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
               <ul>
                 <li>Build My Portfolio. It uses HTML, CSS, JavaScript, Php, Bootstrap.  </li>
                 <li>Deployed at: <a href="https://rajfolio.me">https://rajfolio.me</a></li>
-                <li>Deployed at: <a href="https://rajfolio11.netlify.app" ></a>https://rajfolio11.netlify.app</li>
+                <li>Deployed at: <a href="https://rajfolio11.netlify.app" >https://rajfolio11.netlify.app</a></li>
               </ul>
             </div>
 
