--- a/index.html
+++ b/index.html
@@ -376,6 +376,10 @@
 
           </div>
 
+        </div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+        <p>Thank you for visiting!! Made with ❤ by Rajkumar Pareek.</p>
+        </div>
+
           <!-- <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-row">
