--- a/index.html
+++ b/index.html
@@ -377,7 +377,10 @@
           </div>
 
         </div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+            <div class="form-group col-md-6">
               <p>Thank you for visiting!! Made with ❤ by Rajkumar Pareek.</p>
+            </div>                        
+              
         </div>
 
           <!-- <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
