--- a/index.html
+++ b/index.html
@@ -378,7 +378,10 @@
 
         </div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <div class="form-row">
-              <p>Thank you for visiting!! Made with ❤ by Rajkumar Pareek.</p>
+              <div class="form-group col-md-6">
+                 <p>Thank you for visiting!! Made with ❤ by Rajkumar Pareek.</p>
+              </div>
+              
             </div>                        
               
         </div>
