--- a/index.html
+++ b/index.html
@@ -322,18 +322,6 @@
               </ul>
             </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
           </div>
         </div>
 
@@ -416,11 +404,11 @@
 
   </main><!-- End #main -->
 
-
-  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+<!-- 
+  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a> -->
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/jquery/jquery.min.js"></script>
+  <!-- <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
@@ -430,10 +418,10 @@
   <script src="assets/vendor/venobox/venobox.min.js"></script>
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <script src="assets/vendor/typed.js/typed.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script> -->
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <!-- <script src="assets/js/main.js"></script> -->
 
 </body>
 
